listo creo no se como funciona esto:(

--- a/1/styles/challenge1.html
+++ b/1/styles/challenge1.html
@@ -37,8 +37,8 @@
                 </div>
 
                 <div class="botones">
-                    <button class="btn-encriptar" onclick="btn-encriptar()">Encriptar</button>
-                    <button class="btn-desencriptar" onclick="btn-desencriptar()">Desencriptar</button>
+                    <input type="button" class="btn-encriptar" onclick="encriptar()" value="Encriptar">
+                    <button class="btn-desencriptar" onclick="desencriptar()">Desencriptar</button>
                 </div>
 
             </section>
